NEW135031
Fixed position elements are misplaced when a WK1 view has contentInsets set
https://bugs.webkit.org/show_bug.cgi?id=135031
Summary Fixed position elements are misplaced when a WK1 view has contentInsets set
Beth Dakin
Reported 2014-07-17 15:49:03 PDT
Fixed position elements are misplaced when a WK1 view has contentInsets set. <rdar://problem/17682335>
Attachments
Patch (3.98 KB, patch)
2014-07-17 15:53 PDT, Beth Dakin
no flags
Patch that does not break Yosemite tests (3.95 KB, patch)
2014-07-18 14:48 PDT, Beth Dakin
thorton: review+
Beth Dakin
Comment 1 2014-07-17 15:53:21 PDT
Tim Horton
Comment 2 2014-07-17 16:03:14 PDT
Comment on attachment 235098 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=235098&action=review > Source/WebCore/platform/mac/ScrollViewMac.mm:127 > + IntSize frameSize = IntSize([scrollView() frame].size); No need for the " = IntSize" > Source/WebCore/platform/mac/ScrollViewMac.mm:135 > END_BLOCK_OBJC_EXCEPTIONS; does this need to be before return? I think it might, but I am not sure > Source/WebCore/platform/mac/ScrollViewMac.mm:137 > return IntRect(); why is this still here?
Beth Dakin
Comment 3 2014-07-17 16:08:01 PDT
(In reply to comment #2) > (From update of attachment 235098 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=235098&action=review > > > Source/WebCore/platform/mac/ScrollViewMac.mm:127 > > + IntSize frameSize = IntSize([scrollView() frame].size); > > No need for the " = IntSize" > Fixed. > > Source/WebCore/platform/mac/ScrollViewMac.mm:135 > > END_BLOCK_OBJC_EXCEPTIONS; > > does this need to be before return? I think it might, but I am not sure > > > Source/WebCore/platform/mac/ScrollViewMac.mm:137 > > return IntRect(); > > why is this still here? Both of these have the same answer: this is what the function previously did. It had the normal return statement just before END_BLOCK_OBJC_EXCEPTIONS, and then a generic return after. Other functions in ScrollViewMac that return things follow this convention as well.
Tim Horton
Comment 4 2014-07-17 16:43:55 PDT
(In reply to comment #3) > (In reply to comment #2) > > (From update of attachment 235098 [details] [details]) > > View in context: https://bugs.webkit.org/attachment.cgi?id=235098&action=review > > > > > Source/WebCore/platform/mac/ScrollViewMac.mm:127 > > > + IntSize frameSize = IntSize([scrollView() frame].size); > > > > No need for the " = IntSize" > > > > Fixed. > > > > Source/WebCore/platform/mac/ScrollViewMac.mm:135 > > > END_BLOCK_OBJC_EXCEPTIONS; > > > > does this need to be before return? I think it might, but I am not sure > > > > > Source/WebCore/platform/mac/ScrollViewMac.mm:137 > > > return IntRect(); > > > > why is this still here? > > Both of these have the same answer: this is what the function previously did. It had the normal return statement just before END_BLOCK_OBJC_EXCEPTIONS, and then a generic return after. Other functions in ScrollViewMac that return things follow this convention as well. Because that's what they do when they get an exception inside the blocking block. Okie!
Beth Dakin
Comment 5 2014-07-18 14:48:58 PDT
Created attachment 235148 [details] Patch that does not break Yosemite tests
Csaba Osztrogonác
Comment 6 2015-09-14 11:13:24 PDT
Comment on attachment 235098 [details] Patch Cleared Tim Horton's review+ from obsolete attachment 235098 [details] so that this bug does not appear in http://webkit.org/pending-commit.
Note You need to log in before you can comment on or make changes to this bug.