Source/WebCore/platform/mac/ScrollViewMac.mm
@@ -34,6 +34,14 @@
 #import "NotImplemented.h"
 #import "WebCoreFrameView.h"
 
+@interface NSClipView (Details)
+- (NSRect)_insetBounds;
+@end
+
+@interface NSScrollView (Details)
+- (NSEdgeInsets)contentInsets;
+@end
+
 @interface NSWindow (WebWindowDetails)
 - (BOOL)_needsToResetDragMargins;
 - (void)_setNeedsToResetDragMargins:(BOOL)needs;
@@ -107,23 +115,31 @@ bool ScrollView::platformCanBlitOnScroll() const
 IntRect ScrollView::platformVisibleContentRect(bool includeScrollbars) const
 {
     BEGIN_BLOCK_OBJC_EXCEPTIONS;
-    IntRect result = enclosingIntRect([scrollView() documentVisibleRect]);
-    if (includeScrollbars)
-        result.setSize(IntSize([scrollView() frame].size));
-    return result;
+
+    IntRect visibleContentRect;
+#if __MAC_OS_X_VERSION_MIN_REQUIRED >= 10100
+    visibleContentRect = enclosingIntRect([[scrollView() contentView] _insetBounds]);
+#else
+    visibleContentRect = enclosingIntRect([scrollView() documentVisibleRect]);
+#endif
+
+    if (includeScrollbars) {
+        IntSize frameSize([scrollView() frame].size);
+#if __MAC_OS_X_VERSION_MIN_REQUIRED >= 10100
+        frameSize.contract(scrollView().contentInsets.left + scrollView().contentInsets.right, scrollView().contentInsets.top + scrollView().contentInsets.bottom);
+#endif
+        visibleContentRect.setSize(frameSize);
+    }
+
+    return visibleContentRect;
     END_BLOCK_OBJC_EXCEPTIONS;
+
     return IntRect();
 }
 
 IntSize ScrollView::platformVisibleContentSize(bool includeScrollbars) const
 {
-    BEGIN_BLOCK_OBJC_EXCEPTIONS;
-    if (includeScrollbars)
-        return IntSize([scrollView() frame].size);
-
-    return expandedIntSize(FloatSize([scrollView() documentVisibleRect].size));
-    END_BLOCK_OBJC_EXCEPTIONS;
-    return IntSize();
+    return platformVisibleContentRect(includeScrollbars).size();
 }
 
 void ScrollView::platformSetContentsSize()
